--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ include_directories("${MP2_INCLUDE}" gtest)
 add_subdirectory(src)
 add_subdirectory(gtest)
 add_subdirectory(test)
+add_subdirectory(run_cmd)
