--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,4 @@
-set(target ${MP2_LIBRARY})
+file(GLOB_RECURSE SOURCE_FILES *.cpp)
 
-file(GLOB hdrs "*.h*" "${MP2_INCLUDE}/*.h*")
-file(GLOB srcs "*.cpp")
-
-add_library(${target} STATIC ${srcs} ${hdrs})
-target_link_libraries(${target} ${LIBRARY_DEPS})
+add_library(${ProjectName} ${SOURCE_FILES})
+target_include_directories(${ProjectName} PUBLIC ${CMAKE_SOURCE_DIR}/include)
