Correct project template 2.0

--- a/run/CMakeLists.txt
+++ b/run/CMakeLists.txt
@@ -1,4 +1,6 @@
 file(GLOB_RECURSE RUN_FILES *.cpp)
 
-add_executable(run ${RUN_FILES})
-target_link_libraries(run PRIVATE ${ProjectName})
+set(RunName "run")
+
+add_executable(${RunName} ${RUN_FILES})
+target_link_libraries(${RunName} PRIVATE ${ProjectName})
